Fixed text overflow

--- a/src/taskpane/taskpane.css
+++ b/src/taskpane/taskpane.css
@@ -105,7 +105,3 @@ ul {
 .center.vertical {
   height: 100vh;
 }
-
-b {
-  font-weight: bold;
-}
